# xeno

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup:py
src/ocli/: cli.py  transact.py  w.py
