[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocli"
version = "0.1.0"
requires-python = ">=3.7"
dependencies = [
    "click>=8.0.0",
    "rich>=10.0.0",
]

[project.scripts]
ocli = "ocli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ocli"]